--- a/src/Classroom/Classroom.fxml
+++ b/src/Classroom/Classroom.fxml
@@ -21,19 +21,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="771.0" prefWidth="1369.0" style="-fx-background-color: #E4E4E4;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Classroom.ClassroomController">
+<AnchorPane prefHeight="771.0" prefWidth="1369.0" styleClass="Pane" stylesheets="@../art/classroom.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Classroom.ClassroomController">
     <children>
-        <VBox layoutX="-4.0" layoutY="-4.0" prefHeight="775.0" prefWidth="246.0" style="-fx-background-color: #4C6AB7;">
+        <VBox layoutX="-4.0" layoutY="-4.0" prefHeight="775.0" prefWidth="246.0" styleClass="VBox" stylesheets="@../art/classroom.css">
             <children>
                 <Pane prefHeight="220.0" prefWidth="410.0">
                     <children>
-                        <ImageView fitHeight="93.0" fitWidth="240.0" layoutX="3.0" layoutY="64.0">
+                        <ImageView fitHeight="93.0" fitWidth="226.0" layoutX="10.0" layoutY="64.0">
                             <image>
                                 <Image url="@../art/MMlogo.png" />
                             </image>
                         </ImageView>
                     </children></Pane>
-                <JFXButton alignment="BASELINE_LEFT" onAction="#openDashboard" prefHeight="146.0" prefWidth="348.0" text="  Classrooms" textFill="WHITE">
+                <JFXButton alignment="BASELINE_LEFT" buttonType="RAISED" onAction="#openDashboard" prefHeight="116.0" prefWidth="246.0" text="  Classrooms" textFill="WHITE">
                     <font>
                         <Font size="20.0" />
                     </font>
@@ -47,7 +47,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="FOLDER" size="30" />
                     </graphic>
                 </JFXButton>
-                <JFXButton alignment="BASELINE_LEFT" onAction="#openSetting" prefHeight="146.0" prefWidth="410.0" text="  Settings" textFill="WHITE">
+                <JFXButton alignment="BASELINE_LEFT" buttonType="RAISED" onAction="#openSetting" prefHeight="115.0" prefWidth="246.0" text="  Settings" textFill="WHITE">
                     <font>
                         <Font size="20.0" />
                     </font>
@@ -60,22 +60,26 @@
                 </JFXButton>
             </children>
         </VBox>
-        <Pane layoutX="242.0" prefHeight="93.0" prefWidth="1189.0" style="-fx-background-color: #FFFFFF;">
+        <Pane layoutX="242.0" prefHeight="93.0" prefWidth="1189.0" stylesheets="@../art/classroom.css">
             <children>
-                <Text fx:id="classroom_name" fill="#726d6d" layoutX="14.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="506.30029296875">
+                <Text fx:id="classroom_name" fill="WHITE" layoutX="14.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="506.30029296875">
                     <font>
                         <Font name="Yu Gothic UI Regular" size="39.0" />
                     </font>
                 </Text>
-            <JFXButton fx:id="markButton" layoutX="769.0" layoutY="30.0" onAction="#markAssignment" prefHeight="39.0" prefWidth="188.0" style="-fx-background-color: #4C6AB7;" text="Mark Assignment " textFill="WHITE">
+            <JFXButton fx:id="markButton" layoutX="871.0" layoutY="31.0" onAction="#markAssignment" prefHeight="39.0" prefWidth="188.0" styleClass="markAssignment" stylesheets="@../art/classroom.css" text="Mark Assignment " textFill="WHITE">
                <font>
                   <Font size="17.0" />
                </font>
             </JFXButton>
-            <Label fx:id="errorMarkingStudentAssignment" layoutX="560.0" layoutY="25.0" prefHeight="50.0" prefWidth="198.0" textFill="#d40404" />
-            <JFXButton fx:id="openHelp" layoutX="957.0" layoutY="24.0" onAction="#openHelp" prefHeight="50.0" prefWidth="94.0" text="Help">
+            <Label fx:id="errorMarkingStudentAssignment" layoutX="560.0" layoutY="25.0" prefHeight="50.0" prefWidth="198.0" textFill="#ff5454">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Label>
+            <JFXButton fx:id="openHelp" buttonType="RAISED" layoutX="1066.0" layoutY="25.0" onAction="#openHelp" prefHeight="50.0" prefWidth="94.0" text="Help" textFill="WHITE">
                <graphic>
-                  <FontAwesomeIconView fill="#4c6ab7" glyphName="QUESTION_CIRCLE" size="25" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="QUESTION_CIRCLE" size="25" />
                </graphic>
                <font>
                   <Font name="Yu Gothic UI Regular" size="15.0" />
@@ -83,13 +87,13 @@
             </JFXButton>
             </children>
         </Pane>
-      <TabPane fx:id="tab_pane" layoutX="242.0" layoutY="93.0" prefHeight="678.0" prefWidth="1127.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="93.0">
+      <TabPane fx:id="tab_pane" layoutX="242.0" layoutY="93.0" prefHeight="678.0" prefWidth="1127.0" stylesheets="@../art/classroom.css" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="93.0">
         <tabs>
           <Tab text="Assignments">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Pane layoutX="763.0" layoutY="-1.0" prefHeight="650.0" prefWidth="302.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="763.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Pane layoutX="889.0" layoutY="-1.0" prefHeight="639.0" prefWidth="300.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;" styleClass="addPane" stylesheets="@../art/classroom.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="889.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <GridPane fx:id="pane" layoutX="3.0" layoutY="327.0" prefHeight="239.0" prefWidth="265.0">
                                 <columnConstraints>
@@ -107,7 +111,7 @@
                                     <RowConstraints maxHeight="153.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                               </GridPane>
-                              <JFXButton fx:id="addAssignment" layoutX="49.0" layoutY="590.0" onAction="#createAssignment" prefHeight="41.0" prefWidth="198.0" style="-fx-background-color: #4C6AB7;" text="Add Assignment" textFill="WHITE">
+                              <JFXButton fx:id="addAssignment" layoutX="49.0" layoutY="590.0" onAction="#createAssignment" prefHeight="41.0" prefWidth="198.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Assignment" textFill="WHITE">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
@@ -147,14 +151,14 @@
                                     <Font size="14.0" />
                                  </font>
                               </Text>
-                              <JFXButton fx:id="btnQuestion" layoutX="30.0" layoutY="300.0" onAction="#addQuestion" style="-fx-background-color: #4C6AB7;" text="Add Question" textFill="WHITE" />
-                              <Label fx:id="errorCreatingAssignment" layoutX="49.0" layoutY="566.0" prefHeight="20.0" prefWidth="180.0" />
+                              <JFXButton fx:id="btnQuestion" layoutX="30.0" layoutY="300.0" onAction="#addQuestion" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Question" textFill="WHITE" />
+                              <Label fx:id="errorCreatingAssignment" layoutX="5.0" layoutY="566.0" prefHeight="20.0" prefWidth="291.0" textAlignment="CENTER" textFill="#d01d1d" />
                            </children>
                         </Pane>
-                        <TableView fx:id="assignment_table" layoutX="-63.0" layoutY="-5.0" onMouseClicked="#RowSelect" onSort="#loadStudentData" prefHeight="644.0" prefWidth="766.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="361.0" AnchorPane.topAnchor="-5.0">
+                        <TableView fx:id="assignment_table" layoutY="-3.0" onMouseClicked="#RowSelect" onSort="#loadStudentData" prefHeight="645.0" prefWidth="890.0" stylesheets="@../art/dashboard.css" AnchorPane.bottomAnchor="-3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="299.0" AnchorPane.topAnchor="-3.0">
                            <columns>
                               <TableColumn fx:id="assignment_id_column" prefWidth="228.93954467773438" text="Assignment ID" />
-                              <TableColumn fx:id="assignment_name_column" prefWidth="533.0604248046875" text="Assignment Name" />
+                              <TableColumn fx:id="assignment_name_column" prefWidth="658.0" text="Assignment Name" />
                            </columns>
                         </TableView>
                      </children>
@@ -198,12 +202,12 @@
                                     </Pane>
                                     <Pane fx:id="student_id_pane" prefHeight="649.0" prefWidth="302.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;">
                                         <children>
-                                            <JFXButton layoutX="32.0" layoutY="144.0" onAction="#addStudentWithID" prefHeight="44.0" prefWidth="233.0" style="-fx-background-color: #4C6AB7;" text="Add Student" textFill="WHITE">
+                                            <JFXButton layoutX="32.0" layoutY="144.0" onAction="#addStudentWithID" prefHeight="44.0" prefWidth="233.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Student" textFill="WHITE">
                                                 <font>
                                                     <Font size="20.0" />
                                                 </font>
                                             </JFXButton>
-                                            <JFXButton layoutX="32.0" layoutY="203.0" onAction="#removeStudent" prefHeight="44.0" prefWidth="233.0" style="-fx-background-color: #4C6AB7;" text="Remove Student" textFill="WHITE">
+                                            <JFXButton layoutX="32.0" layoutY="203.0" onAction="#removeStudent" prefHeight="44.0" prefWidth="233.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Remove Student" textFill="WHITE">
                                                 <font>
                                                     <Font size="20.0" />
                                                 </font>
@@ -220,17 +224,17 @@
                                             </Text>
                                             <Label fx:id="studentIDError" layoutX="47.0" layoutY="114.0" prefHeight="17.0" prefWidth="203.0" textFill="RED">
                                                 <font>
-                                                    <Font name="Yu Gothic UI Regular" size="12.0" />
+                                                    <Font name="Yu Gothic UI Regular" size="13.0" />
                                                 </font>
                                             </Label>
                                         </children>
                                     </Pane>
                                 </children>
                             </StackPane>
-                            <TableView fx:id="student_table" layoutX="-1.0" onMouseClicked="#studentRowSelect" onSort="#loadStudentData" prefHeight="649.0" prefWidth="887.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="302.0" AnchorPane.topAnchor="0.0">
+                            <TableView fx:id="student_table" layoutX="-1.0" onMouseClicked="#studentRowSelect" onSort="#loadStudentData" prefHeight="649.0" prefWidth="887.0" stylesheets="@../art/dashboard.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="302.0" AnchorPane.topAnchor="0.0">
                                 <columns>
                                     <TableColumn fx:id="student_id_column" prefWidth="228.93954467773438" text="Student ID" />
-                                    <TableColumn fx:id="student_name_column" prefWidth="657.0" text="Name" />
+                                    <TableColumn fx:id="student_name_column" prefWidth="656.0" text="Student Name" />
                                 </columns>
                             </TableView>
                         </children>
