--- a/src/Classroom/Classroom.fxml
+++ b/src/Classroom/Classroom.fxml
@@ -60,7 +60,7 @@
                 </JFXButton>
             </children>
         </VBox>
-        <Pane layoutX="242.0" prefHeight="93.0" prefWidth="1189.0" stylesheets="@../art/classroom.css">
+        <Pane layoutX="242.0" prefHeight="104.0" prefWidth="1189.0" stylesheets="@../art/classroom.css">
             <children>
                 <Text fx:id="classroom_name" fill="WHITE" layoutX="14.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="506.30029296875">
                     <font>
@@ -81,9 +81,14 @@
                   <Font name="Yu Gothic UI Regular" size="15.0" />
                </font>
             </JFXButton>
+            <Text fill="WHITE" layoutX="14.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Double-click on selected rows to view details." wrappingWidth="635.78515625">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Text>
             </children>
         </Pane>
-      <TabPane fx:id="tab_pane" layoutX="242.0" layoutY="93.0" prefHeight="678.0" prefWidth="1127.0" stylesheets="@../art/classroom.css" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="93.0">
+      <TabPane fx:id="tab_pane" layoutX="242.0" layoutY="90.0" prefHeight="681.0" prefWidth="1189.0" stylesheets="@../art/classroom.css" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0">
         <tabs>
           <Tab text="Assignments">
                <content>
@@ -107,7 +112,7 @@
                                     <RowConstraints maxHeight="153.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                               </GridPane>
-                              <JFXButton fx:id="addAssignment" layoutX="49.0" layoutY="590.0" onAction="#createAssignment" prefHeight="41.0" prefWidth="198.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Assignment" textFill="WHITE">
+                              <JFXButton fx:id="addAssignment" layoutX="50.0" layoutY="586.0" onAction="#createAssignment" prefHeight="41.0" prefWidth="198.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Assignment" textFill="WHITE">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
