--- a/src/art/login.css
+++ b/src/art/login.css
@@ -14,7 +14,7 @@
 }
 
 
-.text-area {
+.JFXPasswordField {
     -fx-background-color: rgba(0,0,0,0);
     -fx-text-fill: white;
     -fx-font-size: 16;
