--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXPasswordField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -12,7 +12,7 @@
    <children>
       <Pane id="Pane" layoutX="-9.0" layoutY="-1.0" prefHeight="484.0" prefWidth="492.0" styleClass="Pane" stylesheets="@../art/login.css">
          <children>
-            <Text fx:id="signin" fill="WHITE" layoutX="163.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign in" textAlignment="CENTER" wrappingWidth="165.39682006835938">
+            <Text fx:id="signin" fill="WHITE" layoutX="163.0" layoutY="224.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign in" textAlignment="CENTER" wrappingWidth="165.39682006835938">
                <font>
                   <Font name="Yu Gothic UI Light" size="48.0" />
                </font>
@@ -22,16 +22,21 @@
                   <Font name="Yu Gothic Bold" size="18.0" />
                </font>
             </JFXButton>
-            <JFXTextField fx:id="password" focusColor="WHITE" labelFloat="true" layoutX="126.0" layoutY="280.0" prefHeight="40.0" prefWidth="240.0" promptText="Password" styleClass="text-area" stylesheets="@../art/login.css" unFocusColor="WHITE">
-               <font>
-                  <Font name="Yu Gothic Regular" size="16.0" />
-               </font>
-            </JFXTextField>
             <Label fx:id="wrongPassword" layoutX="126.0" layoutY="335.0" prefHeight="20.0" prefWidth="240.0" textFill="#ff6666">
                <font>
                   <Font name="Yu Gothic UI Regular" size="12.0" />
                </font>
             </Label>
+            <JFXPasswordField fx:id="password" focusColor="WHITE" layoutX="126.0" layoutY="273.0" prefHeight="47.0" prefWidth="250.0" promptText="Password" styleClass="JFXPasswordField" stylesheets="@../art/login.css" unFocusColor="WHITE">
+               <font>
+                  <Font name="Yu Gothic UI Regular" size="17.0" />
+               </font>
+            </JFXPasswordField>
+            <Text fill="WHITE" layoutX="115.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to MarkMath!" textAlignment="CENTER" wrappingWidth="272.9999910593033">
+               <font>
+                  <Font name="Yu Gothic UI Semibold" size="40.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
    </children>
