--- a/src/Classroom/Classroom.fxml
+++ b/src/Classroom/Classroom.fxml
@@ -21,9 +21,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="771.0" prefWidth="1369.0" styleClass="Pane" stylesheets="@../art/classroom.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Classroom.ClassroomController">
+<AnchorPane prefHeight="775.0" prefWidth="1370.0" styleClass="Pane" stylesheets="@../art/classroom.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Classroom.ClassroomController">
     <children>
-        <VBox layoutX="-4.0" layoutY="-4.0" prefHeight="775.0" prefWidth="246.0" styleClass="VBox" stylesheets="@../art/classroom.css">
+        <VBox layoutX="-4.0" prefHeight="775.0" prefWidth="246.0" styleClass="VBox" stylesheets="@../art/classroom.css">
             <children>
                 <Pane prefHeight="220.0" prefWidth="410.0">
                     <children>
@@ -60,41 +60,41 @@
                 </JFXButton>
             </children>
         </VBox>
-        <Pane layoutX="242.0" prefHeight="104.0" prefWidth="1189.0" stylesheets="@../art/classroom.css">
+        <Pane layoutX="242.0" prefHeight="104.0" prefWidth="1128.0" stylesheets="@../art/classroom.css">
             <children>
                 <Text fx:id="classroom_name" fill="WHITE" layoutX="14.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="506.30029296875">
                     <font>
                         <Font name="Yu Gothic UI Regular" size="39.0" />
                     </font>
                 </Text>
-            <JFXButton fx:id="markButton" layoutX="871.0" layoutY="31.0" onAction="#markAssignment" prefHeight="39.0" prefWidth="188.0" styleClass="markAssignment" stylesheets="@../art/classroom.css" text="Mark Assignment " textFill="WHITE">
+            <JFXButton fx:id="markButton" layoutX="832.0" layoutY="32.0" onAction="#markAssignment" prefHeight="39.0" prefWidth="188.0" styleClass="markAssignment" stylesheets="@../art/classroom.css" text="Mark Assignment " textFill="WHITE">
                <font>
                   <Font size="17.0" />
                </font>
             </JFXButton>
-            <Label fx:id="errorMarkingStudentAssignment" layoutX="435.0" layoutY="27.0" prefHeight="50.0" prefWidth="436.0" textFill="#ff5454" />
-            <JFXButton fx:id="openHelp" buttonType="RAISED" layoutX="1066.0" layoutY="25.0" onAction="#openHelp" prefHeight="50.0" prefWidth="94.0" text="Help" textFill="WHITE">
+            <Label fx:id="errorMarkingStudentAssignment" layoutX="387.0" layoutY="32.0" prefHeight="50.0" prefWidth="436.0" textFill="#ff5454" />
+            <JFXButton fx:id="openHelp" buttonType="RAISED" layoutX="1020.0" layoutY="27.0" onAction="#openHelp" prefHeight="50.0" prefWidth="94.0" text="Help" textFill="WHITE">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="QUESTION_CIRCLE" size="25" />
                </graphic>
                <font>
-                  <Font name="Yu Gothic UI Regular" size="15.0" />
+                  <Font name="Yu Gothic UI Regular" size="18.0" />
                </font>
             </JFXButton>
             <Text fill="WHITE" layoutX="14.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Double-click on selected rows to view details." wrappingWidth="635.78515625">
                <font>
-                  <Font size="16.0" />
+                  <Font size="14.0" />
                </font>
             </Text>
             </children>
         </Pane>
-      <TabPane fx:id="tab_pane" layoutX="242.0" layoutY="90.0" prefHeight="681.0" prefWidth="1189.0" stylesheets="@../art/classroom.css" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0">
+      <TabPane fx:id="tab_pane" layoutX="242.0" layoutY="107.0" prefHeight="668.0" prefWidth="1148.0" stylesheets="@../art/classroom.css" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="242.0" AnchorPane.rightAnchor="-20.0" AnchorPane.topAnchor="107.0">
         <tabs>
           <Tab text="Assignments">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="652.0" prefWidth="1131.0">
                      <children>
-                        <Pane layoutX="889.0" layoutY="-1.0" prefHeight="639.0" prefWidth="300.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;" styleClass="addPane" stylesheets="@../art/classroom.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="889.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Pane layoutX="825.0" layoutY="-4.0" prefHeight="634.0" prefWidth="303.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;" styleClass="addPane" stylesheets="@../art/classroom.css" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="825.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="-4.0">
                            <children>
                               <GridPane fx:id="pane" layoutX="3.0" layoutY="327.0" prefHeight="239.0" prefWidth="265.0">
                                 <columnConstraints>
@@ -156,7 +156,7 @@
                               <Label fx:id="errorCreatingAssignment" layoutX="5.0" layoutY="566.0" prefHeight="20.0" prefWidth="291.0" textAlignment="CENTER" textFill="#d01d1d" />
                            </children>
                         </Pane>
-                        <TableView fx:id="assignment_table" layoutY="-3.0" onMouseClicked="#RowSelect" onSort="#loadStudentData" prefHeight="645.0" prefWidth="890.0" stylesheets="@../art/dashboard.css" AnchorPane.bottomAnchor="-3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="299.0" AnchorPane.topAnchor="-3.0">
+                        <TableView fx:id="assignment_table" layoutY="-2.0" onMouseClicked="#RowSelect" onSort="#loadStudentData" prefHeight="634.0" prefWidth="827.0" stylesheets="@../art/dashboard.css" AnchorPane.bottomAnchor="-3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="321.0" AnchorPane.topAnchor="-2.0">
                            <columns>
                               <TableColumn fx:id="assignment_id_column" prefWidth="228.93954467773438" text="Assignment ID" />
                               <TableColumn fx:id="assignment_name_column" prefWidth="658.0" text="Assignment Name" />
@@ -170,16 +170,16 @@
                 <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                         <children>
-                            <StackPane layoutX="887.0" prefHeight="649.0" prefWidth="302.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="887.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <StackPane layoutX="844.0" layoutY="-5.0" prefHeight="634.0" prefWidth="284.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="844.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="-5.0">
                                 <children>
-                                    <Pane fx:id="student_name_pane" layoutX="10.0" layoutY="10.0" prefHeight="649.0" prefWidth="302.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;">
+                                    <Pane fx:id="student_name_pane" layoutX="10.0" layoutY="10.0" prefHeight="627.0" prefWidth="275.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;">
                                         <children>
-                                            <JFXButton layoutX="32.0" layoutY="144.0" onAction="#addStudentWithName" prefHeight="44.0" prefWidth="233.0" style="-fx-background-color: #4C6AB7;" text="Add Student" textFill="WHITE">
+                                            <JFXButton layoutX="32.0" layoutY="144.0" onAction="#addStudentWithName" prefHeight="44.0" prefWidth="233.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Student" textFill="WHITE">
                                                 <font>
                                                     <Font size="20.0" />
                                                 </font>
                                             </JFXButton>
-                                            <JFXButton layoutX="32.0" layoutY="203.0" onAction="#addStudentBack" prefHeight="44.0" prefWidth="233.0" style="-fx-background-color: #4C6AB7;" text="Back" textFill="WHITE">
+                                            <JFXButton layoutX="32.0" layoutY="203.0" onAction="#addStudentBack" prefHeight="44.0" prefWidth="233.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Back" textFill="WHITE">
                                                 <font>
                                                     <Font size="20.0" />
                                                 </font>
@@ -199,35 +199,35 @@
                                                     <Font name="Yu Gothic UI Regular" size="12.0" />
                                                 </font>
                                             </Label>
-                                        </children>
-                                    </Pane>
-                                    <Pane fx:id="student_id_pane" prefHeight="649.0" prefWidth="302.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;">
-                                        <children>
-                                            <JFXButton layoutX="32.0" layoutY="144.0" onAction="#addStudentWithID" prefHeight="44.0" prefWidth="233.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Student" textFill="WHITE">
-                                                <font>
-                                                    <Font size="20.0" />
-                                                </font>
-                                            </JFXButton>
-                                            <JFXButton layoutX="32.0" layoutY="203.0" onAction="#removeStudent" prefHeight="44.0" prefWidth="233.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Remove Student" textFill="WHITE">
-                                                <font>
-                                                    <Font size="20.0" />
-                                                </font>
-                                            </JFXButton>
-                                            <JFXTextField fx:id="student_id" layoutX="35.0" layoutY="54.0" prefHeight="50.0" prefWidth="227.0" promptText="Enter ID" style="-fx-background-color: #ffffff;">
-                                                <font>
-                                                    <Font size="19.0" />
-                                                </font>
-                                            </JFXTextField>
-                                            <Text fill="#404040" layoutX="35.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student ID" wrappingWidth="156.9669189453125">
-                                                <font>
-                                                    <Font name="Yu Gothic UI Regular" size="21.0" />
-                                                </font>
-                                            </Text>
-                                            <Label fx:id="studentIDError" layoutX="47.0" layoutY="114.0" prefHeight="17.0" prefWidth="203.0" textFill="RED">
-                                                <font>
-                                                    <Font name="Yu Gothic UI Regular" size="13.0" />
-                                                </font>
-                                            </Label>
+                                          <Pane fx:id="student_id_pane" layoutX="-1.0" layoutY="3.0" prefHeight="634.0" prefWidth="283.0" style="-fx-background-color: #ffffff; -fx-border-color: #e4e4e4;">
+                                              <children>
+                                                  <JFXButton layoutX="32.0" layoutY="144.0" onAction="#addStudentWithID" prefHeight="44.0" prefWidth="233.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Add Student" textFill="WHITE">
+                                                      <font>
+                                                          <Font size="20.0" />
+                                                      </font>
+                                                  </JFXButton>
+                                                  <JFXButton layoutX="32.0" layoutY="203.0" onAction="#removeStudent" prefHeight="44.0" prefWidth="233.0" styleClass="addButton" stylesheets="@../art/classroom.css" text="Remove Student" textFill="WHITE">
+                                                      <font>
+                                                          <Font size="20.0" />
+                                                      </font>
+                                                  </JFXButton>
+                                                  <JFXTextField fx:id="student_id" layoutX="35.0" layoutY="54.0" prefHeight="50.0" prefWidth="227.0" promptText="Enter ID" style="-fx-background-color: #ffffff;">
+                                                      <font>
+                                                          <Font size="19.0" />
+                                                      </font>
+                                                  </JFXTextField>
+                                                  <Text fill="#404040" layoutX="35.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student ID" wrappingWidth="156.9669189453125">
+                                                      <font>
+                                                          <Font name="Yu Gothic UI Regular" size="21.0" />
+                                                      </font>
+                                                  </Text>
+                                                  <Label fx:id="studentIDError" layoutX="47.0" layoutY="114.0" prefHeight="17.0" prefWidth="203.0" textFill="RED">
+                                                      <font>
+                                                          <Font name="Yu Gothic UI Regular" size="13.0" />
+                                                      </font>
+                                                  </Label>
+                                              </children>
+                                          </Pane>
                                         </children>
                                     </Pane>
                                 </children>
